--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,10 +2,20 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <h2 class="section-heading">About</h2>
                 <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                <p class="text-faded">
+                    "알파와 오메가"는 재난을 겪은 사람들의 공포와 불안, 그리고 재난을 겪은 적 없는 사람들의 안일한 태도 사이의 온도차를 다룬다. 
+                </p>
+                <p class="text-faded">
+                    포항에서 두 번째로 큰 지진(진도 4.6)이 일어난 2018년 2월 11일 새벽 5시경, 몸소 지진을 겪고 서울로 돌아온 작가는 포항과 대비되는 서울의 분위기를 겪는다. 진원지인 포항에서 느낀 지진의 심각성이 서울에서는 공유되지 않기 때문이다. 작가는 두 도시의 반응 차이를 ‘정보와 경험의 불균형으로 인한 감각의 차이’로 해석한다. 두 도시 간 감각의 간극을 표현하기 위해 지진의 객관적 지표인 두 도시의 지진 데이터를 이용한다. 
+                </p>
+                <p class="text-faded">
+                    단순히 재난의 이미지가 주는 압도적인 공포와 위압감을 재현하기보다는, 데이터 소니피케의션(Data Sonification)*으로 데이터를 청각화하여 새로운 공감각적인 체험을 제안한다. 재난의 데이터가 빛과 소리로 치환된 공간에서 관객은 자유로이 새로운 형태의 재난을 경험하게 된다.
+                </p>
+                <p class="text-faded">    
+                    * 데이터 소니피케이션(Data Sonification)는 데이터들을 소리로 변환하여 사운드 스케이프 형태로 표현하는 것을 말한다.
+                </p>
             </div>
         </div>
     </div>
