--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,12 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>알파와 오메가</h1>
+            <h1>Alpha and Omega
+                </h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <p>Eunsol Kim</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/lTq8o-3xHkQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 </header>
