--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -7,25 +7,61 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Frequency modulation
                             </div>
                             <div class="project-name">
-                                Project Name
+                                음악에 사용된 소리는 주파수음향변조(Frequency modulation)기법을 사용하여 제작 되었습니다.
+                                FM-Synth는 carrier frequency, modulation frequency, index 값들이 음색변화에 영향을 줍니다. 
+                                소리배음(음색) 변화는 베셀 함수(Bessel Function)에 따라 변합니다.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Data range
+                                </div>
+                                <div class="project-name">
+                                    서울과 포항에서 일어난 지진의 진도 범위는 0.6~5.4이고, 위도 범위는 25.88~26.22 입니다.
+                                   
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            <div class="col-lg-4 col-sm-6">
+                    <a href="#" class="portfolio-box">
+                        <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Scaling
+                                </div>
+                                <div class="project-name">
+                                    지역별 진도와 위도 값은 신디사이저의 사운드를 결정하는
+                                    변수값에 적용됩니다.
+                                    진도는 음가, 템포, 음고, 모듈레이션 ratio에 적용됩니다.
+                                    위도는 modulation index값에 적용 됩니다.
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Rhythm
                             </div>
                             <div class="project-name">
-                                Project Name
+                                지진 사건의 진행에 따라 리듬은 랜덤하게 변화 합니다.
                             </div>
                         </div>
                     </div>
@@ -37,10 +73,11 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Sound Output
                             </div>
                             <div class="project-name">
-                                Project Name
+                                서울 데이터에 대한 사운드는 왼쪽, 
+                                포항 데이터에 대한 사운드는 오른쪽에 출력됩니다. 
                             </div>
                         </div>
                     </div>
@@ -52,40 +89,11 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                            Visaulization
                             </div>
                             <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
+                            시간 순에 따른 진도 값에 따라 포항(Y축), 서울(X축)의 바가 
+                            인터랙션되며 생성되는 소리에 따라 플리커 효과가 적용됩니다.
                             </div>
                         </div>
                     </div>
